--- a/week-2/recipe-site/recipe.html
+++ b/week-2/recipe-site/recipe.html
@@ -39,7 +39,7 @@
 <h2>Instructions</h2>
 <ol>
   <li>Place chicken into a 6-quart slow cooker. Add onion, bell pepper, garlic, chicken stock, tomato puree, black beans, diced tomatoes, corn, green chilies, chipotle pepper, chili powder, oregano, cumin, 3/4 tsp salt, and 1/2 tsp pepper. Stir to combine</li>
-  <li>Cover and cook on low for <strong>7-8 hours.</strong> Remove chicken, let it cool slightly, then shred or dice it inot bite-size pieces, discarding the bones.</li>
+  <li>Cover and cook on low for <strong>7-8 hours.</strong> Remove chicken, let it cool slightly, then shred or dice it into bite-size pieces, discarding the bones.</li>
   <li>Return the chicken to slow cooker. Stir in lime juice and cilantro. Taste and season with additional salt and pepper, <em>if needed.</em></li>
   <li>Serve hot, topped with tortilla strips, avocado, sour cream, and cilantro.</li>
 </ol>
