--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
 	<li><a href="week-2/recipe-site/recipe.html">week-2/recipe-site/recipe.html</a></li>
 	<li><a href="week-2/wiki-article.html">week-2/wiki-article.html</a></li>
 	</ul>
+    <p>This is the first version of my portfolio site.<br>
+    Come back next week for updates.</p>
 </body>
 </html>
