commit all changes before syncing

--- a/week-2/recipe-site/recipe.html
+++ b/week-2/recipe-site/recipe.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slow Cooker Chicken Tortilla Soup Recipe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Slow Cooker Chicken Tortilla Soup</h1>
-<img src="https://snipboard.io/PJUonj.jpg" alt="Tortilla Soup">
+<img src="https://snipboard.io/PJUonj.jpg" alt="Tortilla Soup" style="max-width:300px; height:auto;">
 <br>
 <h2>Ingredients</h2>
 <ul>
@@ -36,16 +40,26 @@
   <li>Sour cream</li>
   <li>Cilantro</li>
 </ul>
-<h2>Instructions</h2>
+<h3>Instructions</h3>
 <ol>
   <li>Place chicken into a 6-quart slow cooker. Add onion, bell pepper, garlic, chicken stock, tomato puree, black beans, diced tomatoes, corn, green chilies, chipotle pepper, chili powder, oregano, cumin, 3/4 tsp salt, and 1/2 tsp pepper. Stir to combine</li>
   <li>Cover and cook on low for <strong>7-8 hours.</strong> Remove chicken, let it cool slightly, then shred or dice it into bite-size pieces, discarding the bones.</li>
   <li>Return the chicken to slow cooker. Stir in lime juice and cilantro. Taste and season with additional salt and pepper, <em>if needed.</em></li>
   <li>Serve hot, topped with tortilla strips, avocado, sour cream, and cilantro.</li>
 </ol>
+<h4 External Links>External Links</h4>
 <p>Tip: Learn how to make your own crispy tortilla strips
   <a href="https://www.simplyrecipes.com/recipes/how_to_make_tortilla_strips/" target="_blank">here</a>
 </p>
-    
+<p> Don't feel like cooking? You can go out a buy a similar dish
+  <a href="https://www.chick-fil-a.com/menu/sides/chicken-tortilla-soup" target="_blank">here</a>
+</p>
+<p> Chicken Tortilla Soup Wikipedia Article
+  <a href="https://en.wikipedia.org/wiki/Tortilla_soup" target="_blank">here</a>
+</p>
+
+    <footer>
+      <p> Recipe by Peyton Knox, 2025</p>
+    </footer>
 </body>
 </html>
