--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<li><a href="week-2/craiglist-ad.html">week-2/craiglist-ad.html</a></li>
 	<li><a href="week-2/recipe-site/recipe.html">week-2/recipe-site/recipe.html</a></li>
 	<li><a href="week-2/wiki-article.html">week-2/wiki-article.html</a></li>
+	<li><a href="week-4/dev-tools-knoxpeyton-wk4.html">week-4/devtools.html</a></li>
 	</ul>
     <p>This is the first version of my portfolio site.<br>
     Come back next week for updates.</p>
