--- a/week-4/tribute.html
+++ b/week-4/tribute.html
@@ -1,4 +1,16 @@
-f965144a047d85d995663e40567d75.png" alt="Portrait of designer Cipe Pineles" alt="Cipe Pineles">
+<h1><strong>CIPE PINELES</h1></strong>
+<h2>1908 - 1991  |  Graphic Designer and Art Director</h2>
+
+<link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;700&display=swap" rel="stylesheet">
+
+
+<div class="container">
+  <!-- this is were the columns are --> 
+  <!-- this is were the columns are --> 
+  <!-- this is were the columns are --> 
+  <section id="columns"> 
+  <div class="column left-column">
+    <img src="https://i.pinimg.com/originals/46/f9/65/46f965144a047d85d995663e40567d75.png" alt="Portrait of designer Cipe Pineles" alt="Cipe Pineles">
   </div>
 
   <div class="column right-column">
@@ -61,4 +73,3 @@ f965144a047d85d995663e40567d75.png" alt="Portrait of designer Cipe Pineles" alt=
     <img src="https://alchetron.com/cdn/cipe-pineles-d0962df7-4c0f-40c1-adf9-05a9e00d66a-resize-750.jpg" alt="Seventeen magazine cover">
   </div>
 </section>
- 
