--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<li><a href="week-2/recipe-site/recipe.html">week-2/recipe-site/recipe.html</a></li>
 	<li><a href="week-2/wiki-article.html">week-2/wiki-article.html</a></li>
 	<li><a href="week-4/dev-tools-knoxpeyton-wk4.html">week-4/devtools.html</a></li>
-	<li><a href="week-4/tribute.html">Project 1: Tribute Page</a></li>
+	<li><a href="week-4/tribute-site/tribute.html">Project 1: Tribute Page</a></li>
 	</ul>
     <p>This is the first version of my portfolio site.<br>
     Come back next week for updates.</p>
