--- a/week-4/tribute-site/tribute.html
+++ b/week-4/tribute-site/tribute.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <h1><strong>CIPE PINELES</h1></strong>
 <h2>1908 - 1991  |  Graphic Designer and Art Director</h2>
 
