--- a/week-5/typography-favorite-book.html
+++ b/week-5/typography-favorite-book.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="stylesheet.css">
 <div class="author"
      <h2>J.K. Rowling</h2>
 <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600&display=swap" rel="stylesheet">
