--- a/week-5/typography-favorite-book.html
+++ b/week-5/typography-favorite-book.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
       <link rel="stylesheet" href="stylesheet.css">
+</head>
 <div class="author"
      <h2>J.K. Rowling</h2>
 <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600&display=swap" rel="stylesheet">
@@ -50,3 +51,5 @@ want Dudley mixing with a child like that.
 </p>
 <link href="https://fonts.google.com/specimen/Inter?categoryFilters=Sans+Serif:%2FSans%2F*" rel="stylesheet">
 </div>
+      <h4>Section 2</h4>
+ <p>I chose this book because it is one of my all time favorites and it reminds me of my childhood. For the title, I really wanted to go for something that felt close to the actual font used in the book/movie series and that also felt true to the story. I came across Metal Mania and thought it was perfect. I chose the font Crimson Text for the author and chapter because the serifs are very angular and I think complimented the title font nicely. The font I picked for the text was a sans-serif because I think it helps the readability of the text which is the most important part. I think the spacing here works nicely not only because I followed the layout of the in-class exercise, but also because it allows for the readers eye to flow and follow information in a way that makes sense. There is also very clear visual hierarchy represented here.</p>
