--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<li><a href="week-4/dev-tools-knoxpeyton-wk4.html">week-4/devtools.html</a></li>
 	<li><a href="week-4/tribute-site/tribute.html">Project 1: Tribute Page</a></li>
 	<li><a href="week-5/typography-favorite-book.html">Favorite Book</a></li>
+	<li><a href="week-6/flexbox-tutorial.html">Flexbox Tutorial</a></li>
 	</ul>
     <p>This is the first version of my portfolio site.<br>
     Come back next week for updates.</p>
