--- a/week-6/flexbox-tutorial.html
+++ b/week-6/flexbox-tutorial.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document Title</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="stylesheet.css">
 </head>
 <header>
   <h1>Flexbox Tutorial</h1>
