--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<li><a href="week-4/tribute-site/tribute.html">Project 1: Tribute Page</a></li>
 	<li><a href="week-5/typography-favorite-book.html">Favorite Book</a></li>
 	<li><a href="https://codepen.io/pknox/pen/XJXOXJb">Flexbox Tutorial</a></li>
+	<li><a href="week-6/field-guide.html">The Sims 4 Field Guide</a></li>
 	</ul>
     <p>This is the first version of my portfolio site.<br>
     Come back next week for updates.</p>
