--- a/week-6/field-guide.html
+++ b/week-6/field-guide.html
@@ -6,7 +6,7 @@
   <title>Simology 101</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&family=IBM+Plex+Mono:wght@400&display=swap" rel="stylesheet">
   <!-- Styles -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
 
