--- a/week-6/case-study/case-study.html
+++ b/week-6/case-study/case-study.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Case Study: Peyton Knox</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="stylesheet.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&family=IBM+Plex+Mono:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -16,21 +16,18 @@
       <hr class="header-line" />
     </header>
 
-    <!-- DESIGN DECISIONS -->
     <div class="section white">
       <h2>What design choices did you make and why?</h2>
       <p>I wanted my overall design to capture both a coding and gaming feel while trying to keep the creative vibe that The Sims 4 has. The color choices and layout were meant to feel balanced and sort of tech inspired. I used bold colors and a soft gradient background to give the site personality without making it feel too busy.</p>
       <p>The typefaces and icons made the design feel pretty modern while also having a digital style. I also tried to keep everything structured and logical, kind of like code itself. I wanted it to feel approachable with the combination of creativity and organization.</p>
     </div>
 
-    <!-- TECHNICAL CHALLENGES -->
     <div class="section white">
       <h2>What was difficult to code? How did you solve it?</h2>
       <p>One of the hardest parts of coding this project was spacing out the text inside each section. Getting things to look evenly distributed was way trickier than I expected. I had to sort of guess and check text sizes and keep adjusting the padding and margins until everything felt visually lined up all the way while still keeping typography rules in mind. It took lots of small tweaks to make it feel balanced.</p>
       <p>When I got stuck I used AI to help me troubleshoot and understand what my code needed or was doing. Even small adjustments made a big difference visually. It was definitely a process of testing, fixing, and learning as I went through the project.</p>
     </div>
 
-    <!-- RESPONSIVE STRATEGY -->
     <div class="section white">
       <h2>How did you adapt your design for mobile?</h2>
       <p>For the mobile version, I wanted the layout to stay clean and easy to navigate so I used a hamburger menu to simplify the navigation bar on the main screen. I wanted everything to stay full width and readable without feeling cramped. It’s really difficult trying to adjust your design from desktop to mobile because you want the layout to flow nicely on a smaller screen.</p>
