--- a/week-6/case-study/case-study.html
+++ b/week-6/case-study/case-study.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Case Study: Peyton Knox</title>
-  <link rel="stylesheet" href="stylesheet.css" />
+  <link rel="stylesheet" href="csstylesheet.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&family=IBM+Plex+Mono:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
