--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<li><a href="week-5/typography-favorite-book.html">Favorite Book</a></li>
 	<li><a href="https://codepen.io/pknox/pen/XJXOXJb">Flexbox Tutorial</a></li>
 	<li><a href="week-6/field-guide.html">The Sims 4 Field Guide</a></li>
-	<li><a href="week-6/case-study.html">Case Study</a></li>
+	<li><a href="case-study/case-study.html">Case Study</a></li>
 	</ul>
     <p>This is the first version of my portfolio site.<br>
     Come back next week for updates.</p>
