--- a/week-6/field-guide.html
+++ b/week-6/field-guide.html
@@ -116,8 +116,9 @@
 
     <footer class="site-footer">
       <h4>View Portfolio</h4>
-      <h4>Read Case Study</h4>
-      <a href="pages/case-study.html" class="button">View Case Study</a>
+     <h4>
+  <a href="week-6/case-study/case-study.html" class="button">Read Case Study</a>
+</h4>
       <p>© 2025 Peyton Knox | Field Guide | Simology 101</p>
     </footer>
   </div>
