--- a/week-6/field-guide.html
+++ b/week-6/field-guide.html
@@ -117,7 +117,7 @@
     <footer class="site-footer">
       <h4>View Portfolio</h4>
      <h4>
-  <a href="week-6/case-study/case-study.html" class="button">Read Case Study</a>
+  <a href="https://p3ytonk.github.io/DESN368-code-design-workspace-pk/week-6/case-study/case-study.html" class="button">Read Case Study</a>
 </h4>
       <p>© 2025 Peyton Knox | Field Guide | Simology 101</p>
     </footer>
