--- a/week-6/case-study/case-study.html
+++ b/week-6/case-study/case-study.html
@@ -12,7 +12,7 @@
   <section class="case-study">
     <header>
       <h1>Case Study: Peyton Knox</h1>
-      <a href="#" class="back-link">Back to Guide</a>
+      <a href="https://p3ytonk.github.io/DESN368-code-design-workspace-pk/week-6/field-guide.html" class="back-button">← Back to Guide</a>
       <hr class="header-line" />
     </header>
 
