--- a/week-6/case-study/case-study.html
+++ b/week-6/case-study/case-study.html
@@ -10,11 +10,10 @@
 <body>
 
   <section class="case-study">
-    <header>
-      <h1>Case Study: Peyton Knox</h1>
-     <a href="https://p3ytonk.github.io/DESN368-code-design-workspace-pk/week-6/field-guide.html" class="back-button">← Back to Guide</a>
-      <hr class="header-line" />
-    </header>
+     <header class="case-header">
+  <h1>Simology Case Study</h1>
+  <a href="https://p3ytonk.github.io/DESN368-code-design-workspace-pk/" class="back-button">Back to Guide</a>
+</header>
 
     <div class="section white">
       <h2>What design choices did you make and why?</h2>
