--- a/week-6/case-study/case-study.html
+++ b/week-6/case-study/case-study.html
@@ -12,7 +12,7 @@
   <section class="case-study">
      <header class="case-header">
   <h1>Simology Case Study</h1>
-  <a href="https://p3ytonk.github.io/DESN368-code-design-workspace-pk/" class="back-button">Back to Guide</a>
+  <a href="https://p3ytonk.github.io/DESN368-code-design-workspace-pk/week-6/field-guide.html" class="back-button">Back to Guide</a>
 </header>
 
     <div class="section white">
