--- a/week-6/case-study/case-study.html
+++ b/week-6/case-study/case-study.html
@@ -29,7 +29,7 @@
 
     <div class="section white">
       <h2>How did you adapt your design for mobile?</h2>
-      <p>For the mobile version, I wanted the layout to stay clean and easy to navigate so I used a hamburger menu to simplify the navigation bar on the main screen. I wanted everything to stay full width and readable without feeling cramped. It’s really difficult trying to adjust your design from desktop to mobile because you want the layout to flow nicely on a smaller screen. I definitely have a lot of respect for people who do this regularly.</p>
+      <p>For the mobile version, I wanted the layout to stay clean and easy to navigate so I used a hamburger menu to simplify the navigation bar on the main screen. I wanted everything to stay full width and readable without feeling cramped. It’s really difficult trying to adjust your design from desktop to mobile because you want the layout to flow nicely on a smaller screen. I have a lot of respect for people who do this regularly.</p>
       <p>I tried to make sure the text and images resized in a way that kept their hierarchy clear with nothing too small or too large to fit. Using Flexbox and media queries helped me control how the layout adjusted, and I paid attention to spacing so that the design felt cohesive even on a phone.</p>
     </div>
 
