--- a/week-6/field-guide.html
+++ b/week-6/field-guide.html
@@ -28,6 +28,10 @@
     <main class="content">
 
       <!-- HERO -->
+<section class="sims-section">
+  <img src="sims4logo.png" alt="The Sims 4 Logo">
+</section>
+      
       <section id="introduction" class="card">
         <div class="badge" aria-hidden="true"></div>
         <h2>Simology 101: A Player's Handbook</h2>
