--- a/week-6/field-guide.html
+++ b/week-6/field-guide.html
@@ -29,7 +29,7 @@
 
       <!-- HERO -->
 <section class="sims-section">
-  <img src="sims4logo.png" alt="The Sims 4 Logo">
+  <img src="images/sims4logo.png" alt="The Sims 4 Logo">
 </section>
       
       <section id="introduction" class="card">
