--- a/week-6/field-guide.html
+++ b/week-6/field-guide.html
@@ -31,7 +31,7 @@
 <section class="sims-section">
   <img src="images/sims4logo.png" alt="The Sims 4 Logo">
 </section>
-      
+      <!-- INTRODUCTION -->
       <section id="introduction" class="card">
         <div class="badge" aria-hidden="true"></div>
         <h2>Simology 101: A Player's Handbook</h2>
