--- a/week-6/field-guide.html
+++ b/week-6/field-guide.html
@@ -28,9 +28,10 @@
     <main class="content">
 
       <!-- HERO -->
-<section class="card sims-section">
-  <img src="sims4logo.png" alt="The Sims 4 Logo">
-</section>
+<div class="content">
+  <section class="card sims-section">
+    <img src="sims4logo.png" alt="The Sims 4 Logo">
+  </section>
       
       <!-- INTRODUCTION -->
       <section id="introduction" class="card">
