--- a/week-6/field-guide.html
+++ b/week-6/field-guide.html
@@ -30,7 +30,7 @@
       <!-- HERO -->
 <div class="content">
   <section class="card sims-section">
-    <img src="sims4logo.png" alt="The Sims 4 Logo">
+    <img src="images/sims4logo.png" alt="The Sims 4 Logo">
   </section>
       
       <!-- INTRODUCTION -->
