--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>HTML Projects Index</title>
+	<!-- FAVICON -->
 	<link rel="icon" type="image/png" href="my-favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="my-favicon/favicon.svg" />
 <link rel="shortcut icon" href="my-favicon/favicon.ico" />
