--- a/week-10/product-landing-page.html
+++ b/week-10/product-landing-page.html
@@ -1,1 +1,395 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/stylesheet.css">
+  <title>Eclectic Vinyl Records</title>
 
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;1,500;1,600&family=Quicksand:wght@400;500;600;700&family=WindSong:wght@400;500&display=swap"
+    rel="stylesheet">
+
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <!-- STICKY HEADER/NAV -->
+  <header id="header">
+    <div class="container header-inner">
+      <a href="#hero" class="brand">
+        <img
+          id="header-img"
+          src="images/header-logo.png"
+          alt="Eclectic vinyl records logo">
+      </a>
+
+      <nav id="nav-bar">
+        <a class="nav-link" href="#features">Vinyl</a>
+        <a class="nav-link" href="#video-section">How it's made</a>
+        <a class="nav-link" href="#data">Details</a>
+        <a class="nav-link" href="#contact">Newsletter</a>
+      </nav>
+
+      <form class="header-search" action="#" method="get">
+        <label class="visually-hidden" for="search">Search by artist or album</label>
+        <input
+          id="search"
+          type="search"
+          name="q"
+          placeholder="search by artist or album">
+      </form>
+
+      <button class="cart-button" type="button" aria-label="Shopping bag">
+        <img src="images/bag-icon.png" alt="" class="cart-icon">
+      </button>
+    </div>
+
+    <!-- NAV-ONLY DIVIDER -->
+    <div class="nav-divider" aria-hidden="true"></div>
+  </header>
+
+  <main>
+    <!-- HERO -->
+    <section id="hero" class="section hero">
+      <div class="container hero-inner">
+        <div class="hero-text">
+          <h1 class="hero-tagline">
+            “Because the best music is meant to be held”
+          </h1>
+        </div>
+      </div>
+    </section>
+
+    <!-- HERO DIVIDER WITH LOGO -->
+    <div class="hero-divider">
+      <div class="section-divider" aria-hidden="true"></div>
+      <img
+        src="images/logo-icon.png"
+        alt="Eclectic vinyl record icon"
+        class="hero-record">
+    </div>
+
+    <!-- FEATURES SECTION -->
+    <section id="features" class="section vinyl-section">
+      <div class="container">
+        <h2 class="section-heading">Featured Spins</h2>
+
+        <div class="vinyl-grid">
+          <article class="vinyl-card">
+            <div class="vinyl-image-wrap">
+              <img
+                src="images/eagles-vinyl.png"
+                alt="Hotel California album cover with vinyl by Eagles">
+              <span class="vinyl-disc"></span>
+            </div>
+            <div class="vinyl-info">
+              <h3>Hotel California</h3>
+              <p class="vinyl-artist">Eagles</p>
+              <button type="button" class="vinyl-price">$17.99</button>
+            </div>
+          </article>
+
+          <article class="vinyl-card">
+            <div class="vinyl-image-wrap">
+              <img
+                src="images/greenday-vinyl.png"
+                alt="American Idiot album cover with vinyl by Green Day">
+              <span class="vinyl-disc"></span>
+            </div>
+            <div class="vinyl-info">
+              <h3>American Idiot</h3>
+              <p class="vinyl-artist">Green Day</p>
+              <button type="button" class="vinyl-price">$22.99</button>
+            </div>
+          </article>
+
+          <article class="vinyl-card">
+            <div class="vinyl-image-wrap">
+              <img
+                src="images/mj-vinyl.png"
+                alt="Thriller album cover with vinyl by Michael Jackson">
+              <span class="vinyl-disc"></span>
+            </div>
+            <div class="vinyl-info">
+              <h3>Thriller</h3>
+              <p class="vinyl-artist">Michael Jackson</p>
+              <button type="button" class="vinyl-price">$24.99</button>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- VIDEO SECTION -->
+    <div class="section-divider" aria-hidden="true"></div>
+
+    <section id="video-section" class="section press-section">
+      <div class="container press-inner">
+        <h2 class="press-heading">The Art of the Press</h2>
+
+        <div class="video-frame">
+          <div class="video-frame-inner">
+            <iframe
+              id="video"
+              src="https://www.youtube.com/embed/Yd2SW-Fys6I?enablejsapi=1"
+              title="How vinyl records are made"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen>
+            </iframe>
+          </div>
+
+          <div class="tv-knobs">
+            <button type="button" class="tv-knob" id="pause-btn">
+              <span class="tv-icon">⏸</span>
+              <span class="visually-hidden">Pause video</span>
+            </button>
+            <button type="button" class="tv-knob" id="play-btn">
+              <span class="tv-icon">▶</span>
+              <span class="visually-hidden">Play video</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- DATA TABLE SECTION -->
+    <div class="section-divider" aria-hidden="true"></div>
+
+    <section id="data" class="section data-section">
+      <div class="container">
+        <h2 class="section-heading">Pressing Details</h2>
+        <p class="section-sub">
+          Compare some of our favorite editions before you drop the needle.
+        </p>
+
+        <div class="table-wrapper">
+          <table id="data-table">
+            <thead>
+              <tr>
+                <th scope="col">Album</th>
+                <th scope="col">Pressing</th>
+                <th scope="col">Speed</th>
+                <th scope="col">Color</th>
+                <th scope="col">Price</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">Hotel California</th>
+                <td>2014 remaster</td>
+                <td>33⅓ RPM</td>
+                <td>Classic black</td>
+                <td>$17.99</td>
+              </tr>
+              <tr>
+                <th scope="row">American Idiot</th>
+                <td>Limited edition</td>
+                <td>33⅓ RPM</td>
+                <td>Neon green swirl</td>
+                <td>$22.99</td>
+              </tr>
+              <tr>
+                <th scope="row">Thriller</th>
+                <td>Anniversary press</td>
+                <td>33⅓ RPM</td>
+                <td>Opaque red</td>
+                <td>$24.99</td>
+              </tr>
+              <tr>
+                <th scope="row">Mystery Mix</th>
+                <td>Staff picks</td>
+                <td>45 RPM</td>
+                <td>Surprise variant</td>
+                <td>$19.99</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </section>
+
+    <!-- NEWSLETTER SECTION -->
+    <div class="section-divider" aria-hidden="true"></div>
+
+    <section id="contact" class="section contact-section">
+      <div class="container contact-inner">
+        <div class="newsletter-stack">
+          <div class="contact-card">
+            <h2 class="section-heading">Join our Newsletter</h2>
+            <p class="section-sub">
+              Sign up to receive updates on new pressings, restocks, and in-store events.
+            </p>
+
+            <form
+              id="contact-form"
+              class="contact-form"
+              action="https://example.com/eclectic-newsletter"
+              method="post">
+              <div class="form-field">
+                <label for="name">Name</label>
+                <input
+                  id="name"
+                  name="name"
+                  type="text"
+                  required>
+              </div>
+
+              <div class="form-field">
+                <label for="email">Email</label>
+                <input
+                  id="email"
+                  name="email"
+                  type="email"
+                  required>
+              </div>
+
+              <div class="form-field">
+                <label for="message">Favorite album or artist</label>
+                <textarea
+                  id="message"
+                  name="message"
+                  rows="3"
+                  required></textarea>
+              </div>
+
+              <button id="submit" type="submit" class="btn primary">
+                Spin me in
+              </button>
+            </form>
+          </div>
+
+          <div class="newsletter-circle">
+            <img
+              src="images/vinyl-newsletter.png"
+              alt="Eclectic vinyl records yellow circle">
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- NEWSLETTER + CONFETTI -->
+  <div id="newsletter-overlay" class="overlay" aria-hidden="true">
+    <div class="overlay-backdrop"></div>
+    <div class="overlay-card">
+      <h2 class="overlay-heading">
+        Thanks for joining our newsletter!
+      </h2>
+      <p class="overlay-text">
+        We’ll be sending fresh spins, restocks, and specials your way soon.
+      </p>
+      <button type="button" class="btn secondary" id="overlay-close">
+        Back to browsing
+      </button>
+    </div>
+    <div id="confetti-container" aria-hidden="true"></div>
+  </div>
+
+  <footer>
+    <div class="container footer-inner">
+      <nav class="footer-nav">
+        <a href="#features">Vinyl</a>
+        <a href="#video-section">How it's made</a>
+        <a href="#data">Details</a>
+        <a href="#contact">Newsletter</a>
+      </nav>
+      <p class="footer-meta">
+        &copy; <span id="year"></span> Eclectic Vinyl Records. All rights reserved.
+      </p>
+    </div>
+
+    <!-- YouTube Iframe -->
+    <script src="https://www.youtube.com/iframe_api"></script>
+
+    <script>
+      var player;
+
+      function onYouTubeIframeAPIReady() {
+        player = new YT.Player('video');
+      }
+
+      (function () {
+        var span = document.getElementById('year');
+        if (span) {
+          span.textContent = new Date().getFullYear();
+        }
+
+        var playBtn = document.getElementById('play-btn');
+        var pauseBtn = document.getElementById('pause-btn');
+
+        if (playBtn) {
+          playBtn.addEventListener('click', function () {
+            if (player && typeof player.playVideo === 'function') {
+              player.playVideo();
+            }
+          });
+        }
+
+        if (pauseBtn) {
+          pauseBtn.addEventListener('click', function () {
+            if (player && typeof player.pauseVideo === 'function') {
+              player.pauseVideo();
+            }
+          });
+        }
+
+        /* Newsletter overlay + confetti */
+        var form = document.getElementById('contact-form');
+        var overlay = document.getElementById('newsletter-overlay');
+        var closeBtn = document.getElementById('overlay-close');
+        var confettiContainer = document.getElementById('confetti-container');
+
+        function createConfetti() {
+          confettiContainer.innerHTML = "";
+          var colors = ["#bb4430", "#edae49", "#80ada0", "#ffffff"];
+          var pieces = 120;
+
+          for (var i = 0; i < pieces; i++) {
+            var piece = document.createElement('span');
+            piece.className = 'confetti-piece';
+            piece.style.left = Math.random() * 100 + 'vw';
+            piece.style.animationDelay = (Math.random() * 1.5) + 's';
+            piece.style.backgroundColor = colors[i % colors.length];
+            piece.style.setProperty(
+              '--confetti-x',
+              (Math.random() * 40 - 20) + 'vw'
+            );
+            confettiContainer.appendChild(piece);
+          }
+        }
+
+        function showOverlay() {
+          overlay.classList.add('visible');
+          overlay.setAttribute('aria-hidden', 'false');
+          createConfetti();
+        }
+
+        function hideOverlay() {
+          overlay.classList.remove('visible');
+          overlay.setAttribute('aria-hidden', 'true');
+          confettiContainer.innerHTML = "";
+        }
+
+        if (form) {
+          form.addEventListener('submit', function (e) {
+            e.preventDefault(); // show banner instead of navigating
+            showOverlay();
+          });
+        }
+
+        if (closeBtn) {
+          closeBtn.addEventListener('click', hideOverlay);
+        }
+
+        overlay.addEventListener('click', function (e) {
+          if (e.target === overlay || e.target === document.querySelector('.overlay-backdrop')) {
+            hideOverlay();
+          }
+        });
+      })();
+    </script>
+  </footer>
+</body>
+</html>
