--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 	<li><a href="week-6/field-guide.html">The Sims 4 Field Guide</a></li>
 	<li><a href="week-6/case-study/case-study.html">Case Study</a></li>
 	<li><a href="week-7/css-reset-research.html">CSS Reset Research</a></li>
+	<li><a href="week-10/product-landing-page.html">Product Landing Page</a></li>
 	</ul>
     <p>This is the first version of my portfolio site.<br>
     Come back next week for updates.</p>
