--- a/week-10/product-landing-page.html
+++ b/week-10/product-landing-page.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/stylesheet.css">
   <title>Eclectic Vinyl Records</title>
 
   <!-- Google Fonts -->
@@ -14,7 +13,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <!-- STICKY HEADER/NAV -->
+  <!-- STICKY HEADER / NAV -->
   <header id="header">
     <div class="container header-inner">
       <a href="#hero" class="brand">
@@ -45,7 +44,7 @@
       </button>
     </div>
 
-    <!-- NAV-ONLY DIVIDER -->
+    <!-- NAV-ONLY GOLD/RED DIVIDER -->
     <div class="nav-divider" aria-hidden="true"></div>
   </header>
 
@@ -61,7 +60,7 @@
       </div>
     </section>
 
-    <!-- HERO DIVIDER WITH LOGO -->
+    <!-- HERO DIVIDER WITH LOGO (ABOVE PRODUCT CARDS) -->
     <div class="hero-divider">
       <div class="section-divider" aria-hidden="true"></div>
       <img
@@ -70,7 +69,7 @@
         class="hero-record">
     </div>
 
-    <!-- FEATURES SECTION -->
+    <!-- FEATURED VINYL / FEATURES SECTION -->
     <section id="features" class="section vinyl-section">
       <div class="container">
         <h2 class="section-heading">Featured Spins</h2>
@@ -210,12 +209,13 @@
       </div>
     </section>
 
-    <!-- NEWSLETTER SECTION -->
+    <!-- CONTACT / NEWSLETTER SECTION -->
     <div class="section-divider" aria-hidden="true"></div>
 
     <section id="contact" class="section contact-section">
       <div class="container contact-inner">
         <div class="newsletter-stack">
+          <!-- teal form card -->
           <div class="contact-card">
             <h2 class="section-heading">Join our Newsletter</h2>
             <p class="section-sub">
@@ -260,6 +260,7 @@
             </form>
           </div>
 
+          <!-- yellow circle image behind form -->
           <div class="newsletter-circle">
             <img
               src="images/vinyl-newsletter.png"
@@ -270,7 +271,7 @@
     </section>
   </main>
 
-  <!-- NEWSLETTER + CONFETTI -->
+  <!-- NEWSLETTER OVERLAY + CONFETTI -->
   <div id="newsletter-overlay" class="overlay" aria-hidden="true">
     <div class="overlay-backdrop"></div>
     <div class="overlay-card">
@@ -300,7 +301,7 @@
       </p>
     </div>
 
-    <!-- YouTube Iframe -->
+    <!-- YouTube Iframe API -->
     <script src="https://www.youtube.com/iframe_api"></script>
 
     <script>
