--- a/week-10/product-landing-page.html
+++ b/week-10/product-landing-page.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/stylesheet.css">
   <title>Eclectic Vinyl Records</title>
 
   <!-- Google Fonts -->
@@ -10,7 +11,6 @@
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;1,500;1,600&family=Quicksand:wght@400;500;600;700&family=WindSong:wght@400;500&display=swap"
     rel="stylesheet">
 
-  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <!-- STICKY HEADER / NAV -->
