--- a/week-10/product-landing-page.html
+++ b/week-10/product-landing-page.html
@@ -76,11 +76,10 @@
 
         <div class="vinyl-grid">
           <article class="vinyl-card">
-            <div class="vinyl-image-wrap">
-              <img
-                src="images/eagles-vinyl.png"
-                alt="Hotel California album cover with vinyl by Eagles">
-            </div>
+            <img
+              src="images/eagles-vinyl.png"
+              alt="Hotel California album cover with vinyl by Eagles"
+              class="vinyl-image">
             <div class="vinyl-info">
               <h3>Hotel California</h3>
               <p class="vinyl-artist">Eagles</p>
@@ -89,11 +88,10 @@
           </article>
 
           <article class="vinyl-card">
-            <div class="vinyl-image-wrap">
-              <img
-                src="images/greenday-vinyl.png"
-                alt="American Idiot album cover with vinyl by Green Day">
-            </div>
+            <img
+              src="images/greenday-vinyl.png"
+              alt="American Idiot album cover with vinyl by Green Day"
+              class="vinyl-image">
             <div class="vinyl-info">
               <h3>American Idiot</h3>
               <p class="vinyl-artist">Green Day</p>
@@ -102,11 +100,10 @@
           </article>
 
           <article class="vinyl-card">
-            <div class="vinyl-image-wrap">
-              <img
-                src="images/mj-vinyl.png"
-                alt="Thriller album cover with vinyl by Michael Jackson">
-            </div>
+            <img
+              src="images/mj-vinyl.png"
+              alt="Thriller album cover with vinyl by Michael Jackson"
+              class="vinyl-image">
             <div class="vinyl-info">
               <h3>Thriller</h3>
               <p class="vinyl-artist">Michael Jackson</p>
