--- a/week-10/product-landing-page.html
+++ b/week-10/product-landing-page.html
@@ -76,10 +76,11 @@
 
         <div class="vinyl-grid">
           <article class="vinyl-card">
-            <img
-              src="images/eagles-vinyl.png"
-              alt="Hotel California album cover with vinyl by Eagles"
-              class="vinyl-image">
+            <div class="vinyl-image-wrap">
+              <img
+                src="images/eagles-vinyl.png"
+                alt="Hotel California album cover with vinyl by Eagles">
+            </div>
             <div class="vinyl-info">
               <h3>Hotel California</h3>
               <p class="vinyl-artist">Eagles</p>
@@ -88,10 +89,11 @@
           </article>
 
           <article class="vinyl-card">
-            <img
-              src="images/greenday-vinyl.png"
-              alt="American Idiot album cover with vinyl by Green Day"
-              class="vinyl-image">
+            <div class="vinyl-image-wrap">
+              <img
+                src="images/greenday-vinyl.png"
+                alt="American Idiot album cover with vinyl by Green Day">
+            </div>
             <div class="vinyl-info">
               <h3>American Idiot</h3>
               <p class="vinyl-artist">Green Day</p>
@@ -100,10 +102,11 @@
           </article>
 
           <article class="vinyl-card">
-            <img
-              src="images/mj-vinyl.png"
-              alt="Thriller album cover with vinyl by Michael Jackson"
-              class="vinyl-image">
+            <div class="vinyl-image-wrap">
+              <img
+                src="images/mj-vinyl.png"
+                alt="Thriller album cover with vinyl by Michael Jackson">
+            </div>
             <div class="vinyl-info">
               <h3>Thriller</h3>
               <p class="vinyl-artist">Michael Jackson</p>
