--- a/week-10/product-landing-page.html
+++ b/week-10/product-landing-page.html
@@ -43,7 +43,7 @@
       </button>
     </div>
 
-    <!-- gold / red stripe just for nav -->
+    <!-- gold / red stripe just under nav -->
     <div class="nav-divider" aria-hidden="true"></div>
   </header>
 
@@ -59,7 +59,7 @@
       </div>
     </section>
 
-    <!-- RED / WHITE DIVIDER + SPINNY LOGO ICON -->
+    <!-- RED / WHITE DIVIDER + SPINNING LOGO ICON -->
     <div class="hero-divider">
       <div class="section-divider" aria-hidden="true"></div>
       <img
@@ -73,12 +73,14 @@
       <div class="container">
         <h2 class="section-heading">Featured Spins</h2>
 
-        <div class="vinyl-grid">
+        <div class="vinyl-row">
           <article class="vinyl-card">
-            <img
-              src="images/eagles-vinyl.png"
-              alt="Hotel California album cover with vinyl by Eagles"
-              class="vinyl-image">
+            <figure class="vinyl-figure">
+              <img
+                src="images/eagles-vinyl.png"
+                alt="Hotel California album cover with vinyl by Eagles"
+                class="vinyl-image">
+            </figure>
             <div class="vinyl-info">
               <h3>Hotel California</h3>
               <p class="vinyl-artist">Eagles</p>
@@ -87,10 +89,12 @@
           </article>
 
           <article class="vinyl-card">
-            <img
-              src="images/greenday-vinyl.png"
-              alt="American Idiot album cover with vinyl by Green Day"
-              class="vinyl-image">
+            <figure class="vinyl-figure">
+              <img
+                src="images/greenday-vinyl.png"
+                alt="American Idiot album cover with vinyl by Green Day"
+                class="vinyl-image">
+            </figure>
             <div class="vinyl-info">
               <h3>American Idiot</h3>
               <p class="vinyl-artist">Green Day</p>
@@ -99,10 +103,12 @@
           </article>
 
           <article class="vinyl-card">
-            <img
-              src="images/mj-vinyl.png"
-              alt="Thriller album cover with vinyl by Michael Jackson"
-              class="vinyl-image">
+            <figure class="vinyl-figure">
+              <img
+                src="images/mj-vinyl.png"
+                alt="Thriller album cover with vinyl by Michael Jackson"
+                class="vinyl-image">
+            </figure>
             <div class="vinyl-info">
               <h3>Thriller</h3>
               <p class="vinyl-artist">Michael Jackson</p>
