--- a/week-10/product-landing-page.html
+++ b/week-10/product-landing-page.html
@@ -18,7 +18,7 @@
       <a href="#hero" class="brand">
         <img
           id="header-img"
-          src="images/header-logo.png"
+          src="header-logo.png"
           alt="Eclectic vinyl records logo">
       </a>
 
@@ -39,7 +39,7 @@
       </form>
 
       <button class="cart-button" type="button" aria-label="Shopping bag">
-        <img src="images/bag-icon.png" alt="" class="cart-icon">
+        <img src="bag-icon.png" alt="" class="cart-icon">
       </button>
     </div>
 
@@ -63,7 +63,7 @@
     <div class="hero-divider">
       <div class="section-divider" aria-hidden="true"></div>
       <img
-        src="images/logo-icon.png"
+        src="logo-icon.png"
         alt="Eclectic vinyl record icon"
         class="hero-record">
     </div>
@@ -77,7 +77,7 @@
           <article class="vinyl-card">
             <figure class="vinyl-figure">
               <img
-                src="images/eagles-vinyl.png"
+                src="eagles-vinyl.png"
                 alt="Hotel California album cover with vinyl by Eagles"
                 class="vinyl-image">
             </figure>
@@ -91,7 +91,7 @@
           <article class="vinyl-card">
             <figure class="vinyl-figure">
               <img
-                src="images/greenday-vinyl.png"
+                src="greenday-vinyl.png"
                 alt="American Idiot album cover with vinyl by Green Day"
                 class="vinyl-image">
             </figure>
@@ -105,7 +105,7 @@
           <article class="vinyl-card">
             <figure class="vinyl-figure">
               <img
-                src="images/mj-vinyl.png"
+                src="mj-vinyl.png"
                 alt="Thriller album cover with vinyl by Michael Jackson"
                 class="vinyl-image">
             </figure>
@@ -255,7 +255,7 @@
 
           <div class="newsletter-circle">
             <img
-              src="images/vinyl-newsletter.png"
+              src="vinyl-newsletter.png"
               alt="Eclectic vinyl records yellow circle">
           </div>
         </div>
