--- a/week-10/product-landing-page.html
+++ b/week-10/product-landing-page.html
@@ -18,7 +18,7 @@
       <a href="#hero" class="brand">
         <img
           id="header-img"
-          src="header-logo.png"
+          src="images/header-logo.png"
           alt="Eclectic vinyl records logo">
       </a>
 
@@ -39,11 +39,11 @@
       </form>
 
       <button class="cart-button" type="button" aria-label="Shopping bag">
-        <img src="bag-icon.png" alt="" class="cart-icon">
+        <img src="images/bag-icon.png" alt="" class="cart-icon">
       </button>
     </div>
 
-    <!-- gold / red stripe just under nav -->
+    <!-- gold / red stripe just for nav -->
     <div class="nav-divider" aria-hidden="true"></div>
   </header>
 
@@ -59,11 +59,11 @@
       </div>
     </section>
 
-    <!-- RED / WHITE DIVIDER + SPINNING LOGO ICON -->
+    <!-- RED / WHITE DIVIDER + SPINNY LOGO ICON -->
     <div class="hero-divider">
       <div class="section-divider" aria-hidden="true"></div>
       <img
-        src="logo-icon.png"
+        src="images/logo-icon.png"
         alt="Eclectic vinyl record icon"
         class="hero-record">
     </div>
@@ -73,14 +73,12 @@
       <div class="container">
         <h2 class="section-heading">Featured Spins</h2>
 
-        <div class="vinyl-row">
+        <div class="vinyl-grid">
           <article class="vinyl-card">
-            <figure class="vinyl-figure">
-              <img
-                src="eagles-vinyl.png"
-                alt="Hotel California album cover with vinyl by Eagles"
-                class="vinyl-image">
-            </figure>
+            <img
+              src="images/eagles-vinyl.png"
+              alt="Hotel California album cover with vinyl by Eagles"
+              class="vinyl-image">
             <div class="vinyl-info">
               <h3>Hotel California</h3>
               <p class="vinyl-artist">Eagles</p>
@@ -89,12 +87,10 @@
           </article>
 
           <article class="vinyl-card">
-            <figure class="vinyl-figure">
-              <img
-                src="greenday-vinyl.png"
-                alt="American Idiot album cover with vinyl by Green Day"
-                class="vinyl-image">
-            </figure>
+            <img
+              src="images/greenday-vinyl.png"
+              alt="American Idiot album cover with vinyl by Green Day"
+              class="vinyl-image">
             <div class="vinyl-info">
               <h3>American Idiot</h3>
               <p class="vinyl-artist">Green Day</p>
@@ -103,12 +99,10 @@
           </article>
 
           <article class="vinyl-card">
-            <figure class="vinyl-figure">
-              <img
-                src="mj-vinyl.png"
-                alt="Thriller album cover with vinyl by Michael Jackson"
-                class="vinyl-image">
-            </figure>
+            <img
+              src="images/mj-vinyl.png"
+              alt="Thriller album cover with vinyl by Michael Jackson"
+              class="vinyl-image">
             <div class="vinyl-info">
               <h3>Thriller</h3>
               <p class="vinyl-artist">Michael Jackson</p>
@@ -255,7 +249,7 @@
 
           <div class="newsletter-circle">
             <img
-              src="vinyl-newsletter.png"
+              src="images/vinyl-newsletter.png"
               alt="Eclectic vinyl records yellow circle">
           </div>
         </div>
