--- a/week-10/product-landing-page.html
+++ b/week-10/product-landing-page.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
-  <!-- FIXED HEADER / NAV -->
+  <!-- FIXED HEADER/NAV -->
   <header id="header">
     <div class="container header-inner">
       <a href="#hero" class="brand">
@@ -43,7 +43,7 @@
       </button>
     </div>
 
-    <!-- gold / red stripe just for nav -->
+    <!-- gold/red stripe just for nav -->
     <div class="nav-divider" aria-hidden="true"></div>
   </header>
 
@@ -59,7 +59,6 @@
       </div>
     </section>
 
-    <!-- RED / WHITE DIVIDER + SPINNY LOGO ICON -->
     <div class="hero-divider">
       <div class="section-divider" aria-hidden="true"></div>
       <img
@@ -68,7 +67,6 @@
         class="hero-record">
     </div>
 
-    <!-- FEATURED VINYL (FEATURES SECTION) -->
     <section id="features" class="section vinyl-section">
       <div class="container">
         <h2 class="section-heading">Featured Spins</h2>
@@ -113,10 +111,9 @@
       </div>
     </section>
 
-    <!-- DIVIDER -->
     <div class="section-divider" aria-hidden="true"></div>
 
-    <!-- VIDEO / HOW IT'S MADE -->
+    <!-- VIDEO/HOW IT'S MADE -->
     <section id="video-section" class="section press-section">
       <div class="container">
         <h2 class="press-heading">The Art of the Press</h2>
@@ -147,7 +144,6 @@
       </div>
     </section>
 
-    <!-- DIVIDER -->
     <div class="section-divider" aria-hidden="true"></div>
 
     <!-- DATA TABLE -->
@@ -207,7 +203,7 @@
     <!-- DIVIDER -->
     <div class="section-divider" aria-hidden="true"></div>
 
-    <!-- NEWSLETTER / CONTACT -->
+    <!-- NEWSLETTER/CONTACT -->
     <section id="contact" class="section contact-section">
       <div class="container contact-inner">
         <div class="newsletter-stack">
@@ -287,7 +283,7 @@
       </p>
     </div>
 
-    <!-- YouTube Iframe API -->
+    <!-- YouTube Iframe -->
     <script src="https://www.youtube.com/iframe_api"></script>
 
     <script>
@@ -302,7 +298,6 @@
         var span = document.getElementById('year');
         if (span) span.textContent = new Date().getFullYear();
 
-        // video play / pause
         var playBtn = document.getElementById('play-btn');
         var pauseBtn = document.getElementById('pause-btn');
 
@@ -322,7 +317,6 @@
           });
         }
 
-        // newsletter overlay + confetti
         var form = document.getElementById('contact-form');
         var overlay = document.getElementById('newsletter-overlay');
         var closeBtn = document.getElementById('overlay-close');
