--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;600;700&family=Dawning+of+a+New+Day&display=swap" rel="stylesheet">
 
   <!-- Favicon -->
-  <link rel="icon" href="images/favicon.png" type="image/png">
+ <link rel="icon" type="image/png" href="my-favicon/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="my-favicon/favicon.svg" />
+<link rel="shortcut icon" href="my-favicon/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="my-favicon/apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="MyWebSite" />
+<link rel="manifest" href="my-favicon/site.webmanifest" />
 
-  <link rel="stylesheet" href="stylesheet.css">
+  <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
   <!-- ===== HEADER & NAV ===== -->
