--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Favicon -->
   <link rel="icon" href="images/favicon.png" type="image/png">
 
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
   <!-- ===== HEADER & NAV ===== -->
