--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!-- Favicon -->
   <link rel="icon" href="images/favicon.png" type="image/png">
 
+  <!-- NOTE: stylesheet is in css/ folder -->
   <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
@@ -149,10 +150,10 @@
       <div class="footer-icons">
         <!-- Replace # with your real profile links -->
         <a href="#" class="icon-button github" aria-label="GitHub profile">
-          <img src="images/github-icon.svg" alt="" aria-hidden="true">
+          <img src="images/Github.png" alt="" aria-hidden="true">
         </a>
         <a href="#" class="icon-button linkedin" aria-label="LinkedIn profile">
-          <img src="images/linkedin-icon.svg" alt="" aria-hidden="true">
+          <img src="images/Linkedin.png" alt="" aria-hidden="true">
         </a>
       </div>
     </div>
