--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Favicon -->
   <link rel="icon" href="images/favicon.png" type="image/png">
 
-  <!-- NOTE: stylesheet is in css/ folder -->
+  <!-- stylesheet is in css/ folder -->
   <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
@@ -78,16 +78,44 @@
         <article class="projects-card" aria-label="Selected projects">
           <ul class="projects-list">
             <li>
-              <a href="#" class="project-link">Vol. 1 Recipe Site</a>
+              <a
+                href="week-2/recipe-site/recipe.html"
+                class="project-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                Vol. 1 Recipe Site
+              </a>
             </li>
             <li>
-              <a href="#" class="project-link">Vol. 2 Tribute Page</a>
+              <a
+                href="week-4/tribute-site/tribute.html"
+                class="project-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                Vol. 2 Tribute Page
+              </a>
             </li>
             <li>
-              <a href="#" class="project-link">Vol. 3 Field Guide</a>
+              <a
+                href="week-6/field-guide.html"
+                class="project-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                Vol. 3 Field Guide
+              </a>
             </li>
             <li>
-              <a href="#" class="project-link">Vol. 4 Product Landing Page</a>
+              <a
+                href="week-10/product-landing-page.html"
+                class="project-link"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                Vol. 4 Product Landing Page
+              </a>
             </li>
           </ul>
         </article>
